--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1>
-                Casa de la Música
-            </h1>
-        </nav>
-    </header>
+    <nav>
+        <h1>
+            Casa de la Música
+        </h1>
+    </nav>
     <main>
         <aside>
             <div class="categorias">
@@ -37,16 +35,29 @@
         </aside>
         <div class="principal">
             <div class="producto">
-                1
+                <img src="./assets/images/bajo-acustico.jpg" alt="bajo bajo acustico">
+                <div class="titulo">
+                    Bajo acustico
+                </div>
+
             </div>
             <div class="producto">
-                2
+                <img src="./assets/images/coga-mini.jpg" alt="Congas mini">
+                <div class="titulo">
+                    Congas mini
+                </div>
             </div>
             <div class="producto">
-                3
+                <img src="./assets/images/guitarra-acustica.jpg" alt="guitarra acustica">
+                <div class="titulo">
+                    Guitarra acustica
+                </div>
             </div>
             <div class="producto">
-                4
+                <img src="./assets/images/interfaz-audio.jpg" alt="interfaz de Audio">
+                <div class="titulo">
+                    Interfaz de audio
+                </div>
             </div>
         </div>
     </main>
